<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_description_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_description_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description" />

        <TextView
            android:id="@+id/label_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_info_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_info_content" />

        <TextView
            android:id="@+id/label_guide_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/label_guide_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_guide_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_guide_content" />
    </LinearLayout>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>